2010-08-30  Tony Chang  <tony@chromium.org>

        Unreviewed, fixing chromium test_expectations after r66299.

        * platform/chromium/test_expectations.txt:

2010-08-30  Evan Martin  <evan@chromium.org>

        Reviewed by Tony Chang.

        [chromium] incorrect baselines on all platforms for fast/css/font-weight-1
        https://bugs.webkit.org/show_bug.cgi?id=44904

        This test uses a custom font.  From the change that checked them in, it
        required build changes to make this custom font available for the tests.
        The Chromium baselines were obviously wrong.

        * platform/chromium-linux/fast/css/font-weight-1-expected.checksum: Removed.
        * platform/chromium-linux/fast/css/font-weight-1-expected.png: Removed.
        * platform/chromium-linux/fast/css/font-weight-1-expected.txt: Removed.
        * platform/chromium-win/fast/css/font-weight-1-expected.checksum: Removed.
        * platform/chromium-win/fast/css/font-weight-1-expected.png: Removed.
        * platform/chromium-win/fast/css/font-weight-1-expected.txt: Removed.
        * platform/chromium/test_expectations.txt: mark as failing on all platforms.

2010-08-30  Dumitru Daniliuc  <dumi@chromium.org>

        Unreviewed, updating Chromium expectations.

        * platform/chromium-linux/fast/lists/li-values-expected.checksum: Removed.
        * platform/chromium-linux/fast/lists/li-values-expected.png: Removed.
        * platform/chromium-linux/fast/lists/li-values-expected.txt: Removed.
        * platform/chromium-linux/fast/lists/w3-css3-list-styles-alphabetic-expected.checksum: Removed.
        * platform/chromium-linux/fast/lists/w3-css3-list-styles-alphabetic-expected.png: Removed.
        * platform/chromium-linux/fast/lists/w3-css3-list-styles-alphabetic-expected.txt: Removed.
        * platform/chromium-linux/fast/lists/w3-css3-list-styles-numeric-expected.checksum: Removed.