@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="../../../fast/js/resources/js-test-style.css">
-<script src="../../../fast/js/resources/js-test-pre.js"></script>
+<link rel="stylesheet" href="../../../../fast/js/resources/js-test-style.css">
+<script src="../../../../fast/js/resources/js-test-pre.js"></script>
 </head>
 <body>
 <p id="description"></p>
 <div id="console"></div>
 <script src="script-tests/doubleclick-should-not-expand-across-lines.js"></script>
-<script src="../../../fast/js/resources/js-test-post.js"></script>
+<script src="../../../../fast/js/resources/js-test-post.js"></script>
 </body>
 </html>
