@@ -1,3 +1,15 @@
+2010-08-30  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Reviewed by Adele Peterson.
+
+        REGRESSION(r51939): platform/win/editing/selection/doubleclick-should-not-expand-across-lines.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=44897
+
+        Fixed the path to fast/js/resources/
+
+        * platform/chromium/test_expectations.txt: No longer fails.
+        * platform/win/editing/selection/doubleclick-should-not-expand-across-lines.html: Fixed.
+
 2010-08-30  Tony Chang  <tony@chromium.org>
 
         Unreviewed, fixing chromium test_expectations after r66299.
